Fix tab ordering on mobile (#21)
* Fix tab ordering on mobile

* tweaks

--- a/profbit/static/css/style.css
+++ b/profbit/static/css/style.css
@@ -63,6 +63,10 @@ nav a {
   margin-bottom: 0px;
 }
 
+.small-margin {
+  margin-bottom: 5px;
+}
+
 .social-icon {
   width: 24px;
   height: 24px;
